--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -13,10 +13,6 @@ body.mainBody {
 	margin-bottom: 5rem;
 }
 
-#Qlogo {
-	
-}
-
 .startTutorialBtn{
 	margin-bottom: 20px;
 }
@@ -105,9 +101,7 @@ p.departmentDescription {
  
   /* Position the tooltip text - see examples below! */
   position: absolute;
-  z-index: 1;
-
-  
+  z-index: 1; 
 }
 
 .hover-content::after {
@@ -133,89 +127,53 @@ p.departmentDescription {
 #showDetails{
 	visibility: hidden;
 }
-/*
-div.stars {
-  width: 00px;
-  display: inline-block;
-  padding: 0px 45px 0px 0px;
-}
 
-input.star { display: none; }
-
-label.star {
-  float: right;
-  
-  font-size: 35px;
-  color: #444;
-  transition: all .2s;
-  text-shadow: 0 0 5px
-}
-
-input.star:checked ~ label.star:before {
-  content: '\2605';
-  color: #FD4;
-  transition: all .25s;
-}
-
-input.star-4:checked ~ label.stary:before {
-  color: #FE7;
-  text-shadow: 0 0 5px #952;
-}
-
-input.star1:checked ~ label.stary:before { color: #F62; }
-
-label.star:hover { transform: rotate(-5deg) scale(1.3); }
-
-label.star:before {
-  content: '\2605';
-}
-*/
-
+/*Star Rating Styling*/
 div.rateContainer {
 	padding: 0px;
 	text-align: 'center';
 	padding-top: 6px;
 }
 
-
 .rate {
-    float: left;
-    height: 26px;
+  float: left;
+  height: 26px;
     
 }
 .rate:not(:checked) > input {
-    position:absolute;
-    top:-9px;
-    visibility: hidden;
+  position:absolute;
+  top:-9px;
+  visibility: hidden;
 }
 .rate:not(:checked) > label {
-    float:right;
-    width:1em;
-    overflow:hidden;
-    white-space:nowrap;
-    cursor:pointer;
-    font-size:30px;
-    color:#ccc;
+  float:right;
+  width:1em;
+  overflow:hidden;
+  white-space:nowrap;
+  cursor:pointer;
+  font-size:30px;
+  color:#ccc;
 }
 .rate:not(:checked) > label:before {
     content: '★ ';
 }
 .rate > input:checked ~ label {
-    color: #ffc700;    
+  color: #ffc700;    
 }
 
 .rate:not(:checked) > label:hover,
 .rate:not(:checked) > label:hover ~ label {
-    color: #deb217;  
+  color: #deb217;  
 }
 .rate > input:checked + label:hover,
 .rate > input:checked + label:hover ~ label,
 .rate > input:checked ~ label:hover,
 .rate > input:checked ~ label:hover ~ label,
 .rate > label:hover ~ input:checked ~ label {
-    color: #c59b08;
-    transform: rotate(-2deg) scale(1.3);
+  color: #c59b08;
+  transform: rotate(-2deg) scale(1.3);
 }
+/*Star Rating End*/
 
 #starTextHeader {
 	text-align: 'center';
@@ -238,6 +196,12 @@ div.rateContainer {
 }
 
 /*checkbox*/
+
+#checkBoxOuterContainer {
+  margin: 10px 0px 10px;
+  font-size:16px
+}
+
 .containerCheckBox {
   display: block;
   position: relative;
@@ -308,11 +272,6 @@ div.rateContainer {
 
 /*checkbox*/
 
-#checkBoxContainer {
-	margin: 10px 0px 10px;
-	font-size:16px
-}
-
 input.moreReasonsText {
 	border: 0;
 	outline: 0;
@@ -326,29 +285,3 @@ input.moreReasonsText {
 	width:100%;
 	height:287px; 
 }
-
-.star-rating {
-	line-height: 32px;
-	font-size: 1.25em;
-}
-
-.star-rating .fa-star {
-	color: yellow;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
